data/derived/fa15/progs/unify/prog2717.ml.out
Characters 126-128:
  | [] -> if a1 = 0 then (0,[]) else (0,a1)
                                        ^^
Error: This expression has type int but an expression was expected of type
         'a list
